--- a/exercicio2/index.html
+++ b/exercicio2/index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Prática Guiada 2</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
+  <title>Prática Guiada 2</title>
 </head>
+
 <body>
-    <main class="container">
-        <form class="light">
-          <h2>Login</h2>
-          <input type="text" id="email" placeholder="e-mail" autocomplete="off" />
-          <br />
-          <input type="text" id="password" placeholder="senha" autocomplete="off" />
-          <button>esconder senha</button>
-          <br />
-          <button>Login</button>
-        </form>
-      </main>
+  <main class="container">
+    <form class="light">
+      <h2>Login</h2>
+      <input type="text" id="email" placeholder="e-mail" autocomplete="off" />
+      <br />
+      <input type="password" id="password" placeholder="senha" autocomplete="off" />
+      <button type="button" onclick="mostrarSenha()">Mostrar Senha</button>
+      <br />
+      <button type="button" id="trocarCor" onclick="escurerTela()">Escurecer Tela</button>
+      <br />
+      <button type="submit">Login</button>
+    </form>
+  </main>
 </body>
+
 </html>
